--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@
 /*SpeechBubble*/
 
 .bubble {
+    padding:1%;
 	position: relative;
 	background-color: antiquewhite;
 	border-radius: .4em;
@@ -54,6 +55,6 @@
 	border-top-color: antiquewhite;
 	border-bottom: 0;
 	border-left: 0;
-	margin-left: -0.312em;
+	margin-left: -4em;
 	margin-bottom: -0.625em;
 }
