--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,23 @@
-/* body{
+body{
     background-image:url("supermarketBackground.png");
-    background-size:contain;                      
-    background-repeat: no-repeat;
-    background-position: center;
-} */
+    background-size: cover;
+    height: 610px;
+    text-align: center;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.scoreBoard{
+    padding-top:7%;
+    font-size: 50px;
+    color:black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+/*Question Section*/
 
 .questions{
     display: flex;
@@ -12,36 +26,30 @@
     flex-direction: column;
 }
 
-.questionText{
-    font-size: 10px;
-    border-radius: 30%;
-    background-color: antiquewhite;
+.questionNumber{
+    font-size: 50px;
     position:relative;
-    padding:0.5%;
+    padding-top:5%;
 }
 
-.scoreBoard{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.answerButtons{
     flex-direction: column;
-}
+    justify-content:space-between;
+    position: relative;
+    padding-top:6%;
+    display: inline-flex;
+    vertical-align: middle;
 
-/* .speechBubbleTail{
-    width: 0;
-    height: 0;
-    border-top: 50px solid transparent;
-    border-left: 100px solid antiquewhite;
-    border-bottom: 50px solid transparent;
-  } */
+}
 
 /*SpeechBubble*/
 
 .bubble {
     padding:1%;
 	position: relative;
-	background-color: antiquewhite;
+	background-color: white;
 	border-radius: .4em;
+    transform:translate(-50%, -10%);
 }
 
 .bubble:after {
@@ -52,7 +60,7 @@
 	width: 0;
 	height: 0;
 	border: 0.625em solid transparent;
-	border-top-color: antiquewhite;
+	border-top-color: white;
 	border-bottom: 0;
 	border-left: 0;
 	margin-left: -4em;
