--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-image:url("supermarketBackground.png");
     background-size: cover;
     height: 610px;
@@ -17,7 +17,10 @@ body{
     flex-direction: column;
 }
 
-/*Question Section*/
+
+
+
+
 
 .questions{
     display: flex;
@@ -42,7 +45,10 @@ body{
 
 }
 
-/*SpeechBubble*/
+
+
+
+
 
 .bubble {
     padding:1%;
@@ -65,4 +71,4 @@ body{
 	border-left: 0;
 	margin-left: -4em;
 	margin-bottom: -0.625em;
-}
+} */
