Installed react router. Tided up styling in map.js

--- a/src/map.css
+++ b/src/map.css
@@ -1,20 +1,22 @@
 .townMap{
     width:100vw;
-    height:98vh;
+    height:100vh;
     position:absolute;
+    top:0;
+    left:0
 }
 
 
 .barn{
     top:60%;
-    left:83%;
+    left:81%;
     position:absolute;
     width:10%;
     height:20%;
 }
 
 .supermarket{
-    top:31%;
+    top:30%;
     left:10%;
     position:absolute;
     width:12%;
@@ -22,15 +24,15 @@
 }
 
 .school{
-    top:55%;
-    left:22%;
+    top:53%;
+    left:21%;
     position:absolute;
     width:13%;
     height:23%;
 }
 
 .clothesShop{
-    top:56%;
+    top:55%;
     left:50%;
     position:absolute;
     width:12%;
