--- a/src/components/Supermarket/supermarket.css
+++ b/src/components/Supermarket/supermarket.css
@@ -1,74 +1,62 @@
-.Supermarket{
+/* .Supermarket{
     background-image:url("supermarketBackground.jpg");
     background-size: cover;
     text-align: center;
     margin: 0 auto;
     overflow: hidden;
     height:98vh;
+} */
+
+.supermarketBackground{
+    width:100vw;
+    height:100vh;
+    position:absolute;
+    top:0;
+    left:0;
+    z-index: -1;
 }
 
-.scoreBoard{
-    padding-top:7%;
-    font-size: 50px;
-    color:black;
+.content{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    justify-content:center;
+    text-align: center;
+    line-height: 4rem;
+    background-color: blanchedalmond;
+    margin-left:auto;
+    margin-right:auto;
+    width:50%;
+    height: min-content;
+    margin-top:10%;
+    padding:3%;
+    border-radius: 0.5rem;
+    border:solid rgb(222, 173, 99);
+    box-shadow: 0.5rem 0.5rem 0.5rem 0rem  rgba(0, 0, 0, 0.75);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
-
-
-
-
-
-.questions{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.answerbuttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border:solid red;
+  margin-left:auto;
+    margin-right:auto;
 }
 
-.questionNumber{
-    font-size: 50px;
-    position:relative;
-    padding-top:5%;
+button{
+    width:20rem;
+    padding:15px;
+    border-radius: 0.5rem;
+    border:solid rgb(222, 173, 99);
+    background-color: blanchedalmond;
+    cursor: pointer;
+    font-size: 1.5rem;
+    display: block;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    
 }
 
-.answerButtons{
-    flex-direction: column;
-    justify-content:space-between;
-    position: relative;
-    padding-top:6%;
-    display: inline-flex;
-    vertical-align: middle;
-
-}
-
-
-
-
-
-
-.bubble {
-    padding:1%;
-	position: relative;
-	background-color: white;
-	border-radius: .4em;
-    transform:translate(-50%, -10%);
-}
-
-.bubble:after {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	width: 0;
-	height: 0;
-	border: 0.625em solid transparent;
-	border-top-color: white;
-	border-bottom: 0;
-	border-left: 0;
-	margin-left: -4em;
-	margin-bottom: -0.625em;
+button:hover{
+    background-color: rgb(223, 206, 180);
 }
