--- a/src/components/Supermarket/supermarket.css
+++ b/src/components/Supermarket/supermarket.css
@@ -1,12 +1,3 @@
-/* .Supermarket{
-    background-image:url("supermarketBackground.jpg");
-    background-size: cover;
-    text-align: center;
-    margin: 0 auto;
-    overflow: hidden;
-    height:98vh;
-} */
-
 .supermarketBackground{
     width:100vw;
     height:100vh;
@@ -16,47 +7,62 @@
     z-index: -1;
 }
 
+
 .content{
     display: flex;
     justify-content:center;
     text-align: center;
-    line-height: 4rem;
     background-color: blanchedalmond;
     margin-left:auto;
     margin-right:auto;
-    width:50%;
+    width:45%;
     height: min-content;
     margin-top:10%;
-    padding:3%;
+    padding:2%;
     border-radius: 0.5rem;
-    border:solid rgb(222, 173, 99);
+    /* border:solid rgb(222, 173, 99); */
     box-shadow: 0.5rem 0.5rem 0.5rem 0rem  rgba(0, 0, 0, 0.75);
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
+.questionNumber{
+    font-size: 150%;
+    font-weight: 400;
+    padding-bottom: 10%;
+}
+
+.questionText{
+    font-size: 170%;
+    font-weight: 600;
+    padding-bottom: 5%;
+}
+
 .answerbuttons{
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border:solid red;
-  margin-left:auto;
-    margin-right:auto;
+  flex-direction: column;
 }
 
 button{
-    width:20rem;
-    padding:15px;
-    border-radius: 0.5rem;
-    border:solid rgb(222, 173, 99);
+    width: 100%;
+    font-size: 1rem;
     background-color: blanchedalmond;
+    border-radius: 0.5rem;
+    display: flex;
+    padding: 0.5rem;
+    justify-content: flex-start;
+    border:solid rgb(222, 173, 99);
     cursor: pointer;
-    font-size: 1.5rem;
-    display: block;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-    
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 button:hover{
     background-color: rgb(223, 206, 180);
 }
+
+.homeButton {
+    text-decoration: none;
+    position:absolute;
+    top:2%;
+    left:auto;
+  }
