--- a/src/components/School/school.css
+++ b/src/components/School/school.css
@@ -1,9 +1,68 @@
-.School{
-    background-image:url("school.jpg");
-    background-size: cover;
-    height: 610px;
-    text-align: center;
-    margin: 0 auto;
-    overflow: hidden;
-    height:98vh;
+.schoolBackground{
+    width:100vw;
+    height:100vh;
+    position:absolute;
+    top:0;
+    left:0;
+    z-index: -1;
 }
+
+
+.schoolContent{
+    display: flex;
+    justify-content:center;
+    text-align: center;
+    background-color: rgb(154, 246, 184);
+    margin-left:auto;
+    margin-right:auto;
+    width:45%;
+    height: min-content;
+    margin-top:10%;
+    padding:2%;
+    border-radius: 0.5rem;
+    /* border:solid rgb(222, 173, 99); */
+    box-shadow: 0.5rem 0.5rem 0.5rem 0rem  rgba(0, 0, 0, 0.75);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+.questionNumber{
+    font-size: 150%;
+    font-weight: 400;
+    padding-bottom: 10%;
+}
+
+.questionText{
+    font-size: 170%;
+    font-weight: 600;
+    padding-bottom: 5%;
+}
+
+.answerButtons{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.School button{
+    width: 100%;
+    font-size: 1rem;
+    background-color: rgb(189, 249, 189);
+    border-radius: 0.5rem;
+    display: flex;
+    padding: 0.5rem;
+    justify-content: flex-start;
+    border:solid rgb(170, 216, 170);
+    cursor: pointer;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.School button:hover{
+    background-color: rgb(143, 232, 173);
+}
+
+.homeButton {
+    text-decoration: none;
+    position:absolute;
+    top:2%;
+    left:auto;
+  }
