--- a/src/App/App.css
+++ b/src/App/App.css
@@ -45,6 +45,6 @@
     height:22%;
 }
 
-img:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+.locations img:hover {
+    transform: scale(1.2);
   }
